@@ -1,6 +1,9 @@
 Revision history {{$dist->name}}
 
 {{$NEXT}}
+	[FIXED]
+	- stopwords with 's are learned without 's to match how they are
+	  checked
 
 1.08      2013-09-24
 	[FIXED]
